# EasyHighTibia

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.ini.example  config.py  docker-compose.yml  docker-production.yml  main.py  models.py  pyproject.toml  utils.py
EasyHigh/: config.py  main.py  models.py  tests.py  utils.py
EasyHigh/scrappers/: tibiadata.py  tibiaring.py
EasyHigh/static/: date_filter.js  expander.js  style.css
EasyHigh/templates/: base.html  result.html  search.html
docs/: example.html  style.css
example/: example.html
scrappers/: guildstats.py  tibiadata.py  tibiaring.py
static/: style.css
templates/: base.html  result.html  search.html
